[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pointcloudkit"
version = "0.1.0"
description = "Lightweight point cloud I/O and processing library. Pure numpy — no open3d dependency."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "laspy>=2.0",
]
keywords = ["point cloud", "lidar", "pcd", "ply", "las", "bin", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mindkosh/pointcloudkit"
Repository = "https://github.com/mindkosh/pointcloudkit"
Issues = "https://github.com/mindkosh/pointcloudkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["pointcloudkit"]
